--- a/Views/Web.config
+++ b/Views/Web.config
@@ -10,7 +10,8 @@
 
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-    <pages pageBaseType="System.Web.Mvc.WebViewPage">
+    <!--<pages pageBaseType="System.Web.Mvc.WebViewPage">默认的，以下设置使用自定义WebViewPage扩展-->
+    <pages pageBaseType="MvcSample.Mvc.MyWebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
