--- a/bin/MvcSample.dll.config
+++ b/bin/MvcSample.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="myConn" connectionString="server=.;database=MvcSample;uid=ZKEACMS;pwd=ZKEACMS;" providerName="System.Data.SqlClient"/>
+    <add name="myConn" connectionString="server=.;database=MvcSample;uid=sasa;pwd=pass@word123;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
